--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,7 +18,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.gg.plugins.mongo</id>
-    <name>Mongo-for-Intelli-J</name>
+    <name>Mongo DB Browser</name>
     <vendor>geetesh-gupta</vendor>
 
     <depends>com.intellij.modules.platform</depends>
