Update README and version

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 pluginGroup=com.gg.plugins.mongo
 pluginName=Mongo DB Browser
 # SemVer format -> https://semver.org
-pluginVersion=0.0.1
+pluginVersion=0.0.2
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild=213
 pluginUntilBuild=222.*
@@ -16,4 +16,9 @@ platformPlugins=
 gradleVersion=7.5.1
 # Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
 # suppress inspection "UnusedProperty"
-kotlin.stdlib.default.dependency = false
+kotlin.stdlib.default.dependency=false
+# Signing details
+CERTIFICATE_CHAIN=./.sign/chain.crt
+PRIVATE_KEY=./.sign/private.pem
+PRIVATE_KEY_PASSWORD=ggguitarG31#!
+PUBLISH_TOKEN=perm:Z2VldGVzaC1ndXB0YQ==.OTItNjc1NA==.9JGIuhiHlj4oZkNmHekxxqmXDpqL3w
