Fix getFont and NullPointerException in NotificationGroupManager issues

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -38,7 +38,7 @@
                              instance="com.gg.plugins.mongo.view.MongoConfigurable"
                              id="preferences.mongoOptions"/>
 
-        <notificationGroup id="Mongo" displayType="BALLOON"/>
+        <notificationGroup id="MongoDBBrowserNotificationGroup" displayType="BALLOON"/>
     </extensions>
 
     <applicationListeners>
